@@ -1,2 +1,2 @@
 
-project.version=1.2.6
+project.version=1.2.7
