@@ -12,11 +12,13 @@ import org.svenson.DynamicProperties;
 import org.svenson.JSONParser;
 
 /**
- * Contains some util methods to handle bean properties dynamically.
+ * Renamed to {@link JSONBeanUtil}.
  *
  * @author shelmberger
+ * @deprecated
  *
  */
+@Deprecated
 public class DynamicPropertiesUtil
 {
     /**
@@ -24,34 +26,24 @@ public class DynamicPropertiesUtil
      * Note that the method will return the <em>JSON property name</em> of the java bean methods.
      * @param dynamicProperties     DynamicProperties object
      * @return a set containing all property names, both dynamic and static (JSON) names.
+     * @deprecated use JSONBeanUtil
      */
+    @Deprecated
     public static Set<String> getAllPropertyNames(DynamicProperties dynamicProperties)
     {
-        Set<String> names  = new HashSet<String>( dynamicProperties.propertyNames());
-        names.addAll( getBeanPropertyNames(dynamicProperties));
-        return names;
+        return JSONBeanUtil.getAllPropertyNames(dynamicProperties);
     }
 
     /**
      * Returns all readable and writable bean property JSON names of the given object.
      * @param dynamicProperties object
      * @return
+     * @deprecated use JSONBeanUtil
      */
+    @Deprecated
     public static Set<String> getBeanPropertyNames(Object dynamicProperties)
     {
-        PropertyDescriptor[] pds = PropertyUtils.getPropertyDescriptors(dynamicProperties.getClass());
-        Set<String> names  = new HashSet<String>();
-        for (PropertyDescriptor pd : pds)
-        {
-            Method readMethod = pd.getReadMethod();
-            Method writeMethod = pd.getWriteMethod();
-            if (readMethod != null && writeMethod != null)
-            {
-               String name = JSONParser.getJSONPropertyNameFromDescriptor(dynamicProperties, pd);
-               names.add(name);
-            }
-        }
-        return names;
+        return JSONBeanUtil.getBeanPropertyNames(dynamicProperties);
     }
 
     /**
@@ -67,44 +59,13 @@ public class DynamicPropertiesUtil
      *             given name on the given dynamicProperties object and the
      *             class of the bean does not implement
      *             {@link DynamicProperties}
+     * @deprecated use JSONBeanUtil
      */
+    @Deprecated
     public static Object getProperty(Object dynamicProperties, String name)
         throws IllegalArgumentException
     {
-        try
-        {
-            String propertyName = JSONParser.getPropertyNameFromAnnotation(dynamicProperties, name);
-            if (PropertyUtils.isReadable(dynamicProperties, propertyName))
-            {
-                return PropertyUtils.getProperty(dynamicProperties, propertyName);
-            }
-            else if (dynamicProperties instanceof DynamicProperties)
-            {
-                return ((DynamicProperties) dynamicProperties).getProperty(name);
-            }
-            else if (dynamicProperties instanceof Map)
-            {
-                return ((Map)dynamicProperties).get(name);
-            }
-            else
-            {
-                throw new IllegalArgumentException(dynamicProperties +
-                    " has no JSON property with the name '" + name +
-                    "' and does not implements DynamicProperties");
-            }
-        }
-        catch (IllegalAccessException e)
-        {
-            throw ExceptionWrapper.wrap(e);
-        }
-        catch (InvocationTargetException e)
-        {
-            throw ExceptionWrapper.wrap(e);
-        }
-        catch (NoSuchMethodException e)
-        {
-            throw ExceptionWrapper.wrap(e);
-        }
+        return JSONBeanUtil.getProperty(dynamicProperties, name);
     }
 
     /**
@@ -120,43 +81,12 @@ public class DynamicPropertiesUtil
      *             given name on the given dynamicProperties object and the
      *             class of the bean does not implement
      *             {@link DynamicProperties}
+     * @deprecated use JSONBeanUtil
      */
+    @Deprecated
     public static void setProperty(Object dynamicProperties, String name, Object value)
         throws IllegalArgumentException
     {
-        try
-        {
-            String propertyName = JSONParser.getPropertyNameFromAnnotation(dynamicProperties, name);
-            if (PropertyUtils.isWriteable(dynamicProperties, propertyName))
-            {
-                PropertyUtils.setProperty(dynamicProperties, propertyName, value);
-            }
-            else if (dynamicProperties instanceof DynamicProperties)
-            {
-                ((DynamicProperties) dynamicProperties).setProperty(name, value);
-            }
-            else if (dynamicProperties instanceof Map)
-            {
-                ((Map)dynamicProperties).put(name, value);
-            }
-            else
-            {
-                throw new IllegalArgumentException(dynamicProperties +
-                    " has no JSON property with the name '" + name +
-                    "' and does not implements DynamicProperties");
-            }
-        }
-        catch (IllegalAccessException e)
-        {
-            throw ExceptionWrapper.wrap(e);
-        }
-        catch (InvocationTargetException e)
-        {
-            throw ExceptionWrapper.wrap(e);
-        }
-        catch (NoSuchMethodException e)
-        {
-            throw ExceptionWrapper.wrap(e);
-        }
+        JSONBeanUtil.setProperty(dynamicProperties, name, value);
     }
 }
